<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_MqttPayload" Id="{4cb37f7e-58bd-4703-9002-9e33a1f7ff48}">
    <Declaration><![CDATA[TYPE ST_MqttPayload :
STRUCT
	id : UINT;
	data : ARRAY[1..32] OF Byte;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>